--- a/backend/package.json
+++ b/backend/package.json
@@ -4,19 +4,18 @@
   "description": "support desk",
   "main": "index.js",
   "scripts": {
-    "dev": "nodemon backend/server.js"
+    "start": "node server.js",
+    "dev": "nodemon server.js"
   },
   "author": "sahil vani",
   "license": "ISC",
   "dependencies": {
-    "@reduxjs/toolkit": "^2.2.1",
     "bcryptjs": "^2.4.3",
     "dotenv": "^16.4.5",
     "express": "^4.18.2",
     "express-async-handler": "^1.2.0",
     "jsonwebtoken": "^9.0.2",
-    "mongoose": "^8.2.0",
-    "react-redux": "^9.1.0"
+    "mongoose": "^8.2.0"
   },
   "devDependencies": {
     "nodemon": "^3.1.0"
